@@ -75,4 +75,5 @@ BUGFIXES:
 056 ==> 324967 - Add support of specific increase numbering offset with advance rename tool.
 057 ==> 453275 - Renaming files is not folder aware, even with folder aware option.
 058 ==> 454656 - When locales not set, crash occurs when opening "Settings -> Configure digiKam".
-059 ==> 
+059 ==> 435377 - Speed up image preview.
+060 ==> 
